[gd_scene load_steps=24 format=3 uid="uid://cbmvlhckexg3e"]

[ext_resource type="Script" uid="uid://c2v5rxci6e1to" path="res://scripts/state machine/FSM.gd" id="1_4ra3w"]
[ext_resource type="Script" uid="uid://dfiyete2a7ao6" path="res://scripts/Enemy.gd" id="1_5uy6h"]
[ext_resource type="PackedScene" uid="uid://btu34wxqcqolv" path="res://scenes/hitbox.tscn" id="1_md0e3"]
[ext_resource type="PackedScene" uid="uid://db2aov3xv8yar" path="res://scenes/hurtbox.tscn" id="2_4ra3w"]
[ext_resource type="Texture2D" uid="uid://d17om2lcwnvlt" path="res://Knight_player/Idle_KG_2.png" id="2_md484"]
[ext_resource type="Shape2D" uid="uid://cjhklns2wlsuo" path="res://assets/shapes/enemy_collision.tres" id="3_8qclf"]
[ext_resource type="AnimationLibrary" uid="uid://dw7yox63bx07y" path="res://assets/animation libraries/enemy_animations.res" id="4_ile5s"]
[ext_resource type="Script" uid="uid://c0j2ep1stylv1" path="res://scripts/state machine/enemy states/Idle.gd" id="5_8qclf"]
[ext_resource type="Resource" uid="uid://bo0q74yaoclwv" path="res://resources/hitbox/enemy_hitbox_resource.tres" id="5_ipns3"]
[ext_resource type="Resource" uid="uid://cp5itl4v1bqsv" path="res://resources/hitbox/enemy_attack_hitbox_resource.tres" id="6_8qclf"]
[ext_resource type="Script" uid="uid://2kqost28fj0c" path="res://scripts/state machine/enemy states/Walk.gd" id="7_g0wcc"]
[ext_resource type="Script" uid="uid://bpb2k278j3ni6" path="res://scripts/state machine/enemy states/Hurt.gd" id="7_otmr2"]
[ext_resource type="Script" uid="uid://qr5a1tgwy6f8" path="res://scripts/state machine/enemy states/Attack.gd" id="8_s1ycm"]
[ext_resource type="Resource" uid="uid://b7iwotpl25p2h" path="res://resources/hurtbox/enemy_hurtbox.tres" id="8_w8i8w"]
[ext_resource type="Script" uid="uid://cbe0rr4r4wnu7" path="res://scripts/state machine/enemy states/Chase.gd" id="10_shcg2"]
[ext_resource type="Script" uid="uid://duvk3ac5p5fyk" path="res://scripts/state machine/enemy states/Airborne.gd" id="13_1x4g4"]
[ext_resource type="Script" uid="uid://cryifoywefk1t" path="res://scripts/state machine/enemy states/Die.gd" id="15_rogs8"]
[ext_resource type="Script" uid="uid://bxuarok3y6w6" path="res://scripts/TestLabel.gd" id="17_shcg2"]

[sub_resource type="Animation" id="Animation_g0wcc"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_md484")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:centered")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Hitbox")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_disabled"
}]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HitboxAttack")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_disabled"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1ycm"]
_data = {
&"RESET": SubResource("Animation_g0wcc")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_g0wcc"]
radius = 138.014

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shcg2"]
size = Vector2(20, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ile5s"]
size = Vector2(3, 3)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_5uy6h")
walk_speed = 60.0
chase_speed = 80.0
friction = 20.0
air_friction = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture_filter = 1
texture = ExtResource("2_md484")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = ExtResource("3_8qclf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s1ycm"),
&"enemy_animations": ExtResource("4_ile5s")
}

[node name="FSM" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_4ra3w")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("5_8qclf")

[node name="Walk" type="Node" parent="FSM"]
script = ExtResource("7_g0wcc")

[node name="Attack" type="Node" parent="FSM"]
script = ExtResource("8_s1ycm")

[node name="Hurt" type="Node" parent="FSM"]
script = ExtResource("7_otmr2")

[node name="Chase" type="Node" parent="FSM"]
script = ExtResource("10_shcg2")

[node name="Airborne" type="Node" parent="FSM"]
script = ExtResource("13_1x4g4")

[node name="Die" type="Node" parent="FSM"]
script = ExtResource("15_rogs8")

[node name="Hitbox" parent="." instance=ExtResource("1_md0e3")]
hitbox_resource = ExtResource("5_ipns3")

[node name="HitboxAttack" parent="." instance=ExtResource("1_md0e3")]
hitbox_resource = ExtResource("6_8qclf")

[node name="Hurtbox" parent="." instance=ExtResource("2_4ra3w")]
hurtbox_resource = ExtResource("8_w8i8w")

[node name="IdleTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="WalkTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true

[node name="AggroArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource("CircleShape2D_g0wcc")
debug_color = Color(0.513, 0.57, 0, 0.137255)

[node name="LoS" type="RayCast2D" parent="AggroArea"]
target_position = Vector2(0, 0)
collision_mask = 3

[node name="Pivot" type="Node2D" parent="."]
visible = false

[node name="WallCheck" type="Area2D" parent="Pivot"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/WallCheck"]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_shcg2")

[node name="FloorCheck" type="Area2D" parent="Pivot"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/FloorCheck"]
position = Vector2(12.5, 34.5)
shape = SubResource("RectangleShape2D_ile5s")

[node name="Label" type="Label" parent="."]
offset_left = -76.0
offset_top = -59.0
offset_right = 76.0
offset_bottom = -36.0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("17_shcg2")

[connection signal="force_applied" from="Hurtbox" to="." method="_on_hurtbox_force_applied"]
[connection signal="hurtbox_destroyed" from="Hurtbox" to="." method="_on_hurtbox_hurtbox_destroyed"]
[connection signal="hurtbox_hit" from="Hurtbox" to="." method="_on_hurtbox_hurtbox_hit"]
[connection signal="timeout" from="IdleTimer" to="FSM/Idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="WalkTimer" to="FSM/Walk" method="_on_walk_timer_timeout"]
[connection signal="body_entered" from="AggroArea" to="." method="_on_aggro_area_body_entered"]
[connection signal="body_exited" from="AggroArea" to="." method="_on_aggro_area_body_exited"]
[connection signal="body_entered" from="Pivot/WallCheck" to="FSM/Walk" method="_on_wall_ckeck_body_entered"]
[connection signal="body_exited" from="Pivot/FloorCheck" to="FSM/Walk" method="_on_floor_check_body_exited"]
